Fixes for bug 72599. Checking in on dougt's behalf. r=dougt, sr=brendan, a=blizzard.